samples/_failures_safe/1761459601_326210_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_428879d0.c: In function ‘main’:
./samples/SAFE/__tmp_428879d0.c:164:9: error: expected ‘;’ at end of input
  164 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_428879d0.c:164:5: error: expected declaration or statement at end of input
  164 |     free
      |     ^~~~
